Bug 1771409 - Remove detection of need for forced imap select. r=BenB,mkmelin

--HG--
extra : amend_source : 848eba6ee414d3c6b1dc15e403a90a97323271d4