mailnews/imap/src/nsImapProtocol.cpp
@@ -291,8 +291,6 @@ static bool gExpungeAfterDelete = false;
 static bool gCheckDeletedBeforeExpunge = false;  // bug 235004
 static int32_t gResponseTimeout = 100;
 static int32_t gAppendTimeout = gResponseTimeout / 5;
-static nsCString gForceSelectDetect;
-static nsTArray<nsCString> gForceSelectServersArray;
 static nsImapProtocol::TCPKeepalive gTCPKeepalive;
 
 // let delete model control expunging, i.e., don't ever expunge when the
@@ -341,8 +339,6 @@ nsresult nsImapProtocol::GlobalInitialization(nsIPrefBranch* aPrefBranch) {
                           &gExpungeThreshold);
   aPrefBranch->GetIntPref("mailnews.tcptimeout", &gResponseTimeout);
   gAppendTimeout = gResponseTimeout / 5;
-  aPrefBranch->GetCharPref("mail.imap.force_select_detect", gForceSelectDetect);
-  ParseString(gForceSelectDetect, ';', gForceSelectServersArray);
 
   gTCPKeepalive.enabled.store(false, std::memory_order_relaxed);
   gTCPKeepalive.idleTimeS.store(-1, std::memory_order_relaxed);
@@ -672,7 +668,7 @@ nsImapProtocol::Initialize(nsIImapHostSessionList* aHostSessionList,
   if (!m_flagState) return NS_ERROR_OUT_OF_MEMORY;
 
   aServer->GetUseIdle(&m_useIdle);
-  aServer->GetForceSelect(m_forceSelectValue);
+  aServer->GetForceSelect(&m_forceSelect);
   aServer->GetUseCondStore(&m_useCondStore);
   aServer->GetUseCompressDeflate(&m_useCompressDeflate);
   aServer->GetAllowUTF8Accept(&m_allowUTF8Accept);
@@ -2687,10 +2683,7 @@ void nsImapProtocol::ProcessSelectedStateURL() {
         // get new message counts, if any, from server
         if (m_needNoop) {
           // For some IMAP servers, to detect new email we must send imap
-          // SELECT even if already SELECTed on the same mailbox. For other
-          // servers that simply don't support IDLE, doing select here will
-          // cause emails to be properly marked "read" after they have been
-          // read in another email client.
+          // SELECT even if already SELECTed on the same mailbox.
           if (m_forceSelect) {
             SelectMailbox(mailboxName.get());
             selectIssued = true;
@@ -7751,47 +7744,6 @@ bool nsImapProtocol::GetListSubscribedIsBrokenOnServer() {
   return false;
 }
 
-// This identifies servers that require an extra imap SELECT to detect new
-// email in a mailbox. Servers requiring this are found by comparing their
-// ID string, returned with imap ID command, to strings entered in
-// mail.imap.force_select_detect. Only openwave servers used by
-// Charter/Spectrum ISP returning an ID containing the strings ""name" "Email
-// Mx"" and ""vendor" "Openwave Messaging"" are now known to have this issue.
-// The compared strings can be modified with the config editor if necessary
-// (e.g., a "version" substring could be added). Also, additional servers
-// having a different set of strings can be added if ever needed.
-// The mail.imap.force_select_detect uses semicolon delimiter between
-// servers and within a server substrings to compare are comma delimited.
-// This example force_select_detect value shows how two servers types
-// could be detected:
-// "name" "Email Mx","vendor" "Openwave Messaging";"vendor" "Yahoo! Inc.","name"
-// "Y!IMAP";
-bool nsImapProtocol::IsExtraSelectNeeded() {
-  bool retVal;
-  for (uint32_t i = 0; i < gForceSelectServersArray.Length(); i++) {
-    retVal = true;
-    nsTArray<nsCString> forceSelectStringsArray;
-    ParseString(gForceSelectServersArray[i], ',', forceSelectStringsArray);
-    for (uint32_t j = 0; j < forceSelectStringsArray.Length(); j++) {
-      // Each substring within the server string must be contained in ID string.
-      // First un-escape any comma (%2c) or semicolon (%3b) within the
-      // substring.
-      nsAutoCString unescapedString;
-      MsgUnescapeString(forceSelectStringsArray[j], 0, unescapedString);
-      if (GetServerStateParser().GetServerID().Find(
-              unescapedString, /* ignoreCase = */ true) == kNotFound) {
-        retVal = false;
-        break;
-      }
-    }
-    // Matches found for all substrings for the server.
-    if (retVal) return true;
-  }
-
-  // If reached, no substrings match for any server.
-  return false;
-}
-
 void nsImapProtocol::Lsub(const char* mailboxPattern,
                           bool addDirectoryIfNecessary) {
   ProgressEventFunctionUsingName("imapStatusLookingForMailbox");
@@ -8201,68 +8153,13 @@ void nsImapProtocol::ProcessAfterAuthenticated() {
       UseCondStore())
     EnableCondStore();
 
-  bool haveIdResponse = false;
   if ((GetServerStateParser().GetCapabilityFlag() & kHasIDCapability) &&
       m_sendID) {
     ID();
-    if (m_imapServerSink && !GetServerStateParser().GetServerID().IsEmpty()) {
-      haveIdResponse = true;
-      // Determine value for m_forceSelect based on config editor
-      // entries and comparison to imap ID string returned by the server.
+    if (m_imapServerSink && !GetServerStateParser().GetServerID().IsEmpty())
       m_imapServerSink->SetServerID(GetServerStateParser().GetServerID());
-      switch (m_forceSelectValue.get()[0]) {
-        // Yes: Set to always force even if imap server doesn't need it.
-        case 'y':
-        case 'Y':
-          m_forceSelect = true;
-          break;
-
-        // No: Set to never force a select for this imap server.
-        case 'n':
-        case 'N':
-          m_forceSelect = false;
-          break;
-
-        // Auto: Set to force only if imap server requires it.
-        default:
-          nsAutoCString statusString;
-          m_forceSelect = IsExtraSelectNeeded();
-          // Setting to "yes-auto" or "no-auto" avoids doing redundant calls to
-          // IsExtraSelectNeeded() on subsequent ID() occurrences. It also
-          // provides feedback to the user regarding the detection status.
-          if (m_forceSelect) {
-            // Set preference value to "yes-auto".
-            statusString.AssignLiteral("yes-auto");
-          } else {
-            // Set preference value to "no-auto".
-            statusString.AssignLiteral("no-auto");
-          }
-          m_imapServerSink->SetServerForceSelect(statusString);
-          break;
-      }
-    }
   }
 
-  // If no ID capability or empty ID response, user may still want to
-  // change "force select".
-  if (!haveIdResponse) {
-    switch (m_forceSelectValue.get()[0]) {
-      case 'a': {
-        // If default "auto", set to "no-auto" so visible in config editor
-        // and set/keep m_forceSelect false.
-        nsAutoCString statusString;
-        statusString.AssignLiteral("no-auto");
-        m_imapServerSink->SetServerForceSelect(statusString);
-        m_forceSelect = false;
-      } break;
-      case 'y':
-      case 'Y':
-        m_forceSelect = true;
-        break;
-      default:
-        m_forceSelect = false;
-    }
-  }
   bool utf8AcceptAllowed = m_allowUTF8Accept;
   m_allowUTF8Accept = false;
   if (utf8AcceptAllowed &&
